Launchpad automatic translations update.

--- a/account/i18n/de.po
+++ b/account/i18n/de.po
@@ -8,15 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-10-08 18:47+0000\n"
-"Last-Translator: Thorsten Vocks (OpenBig.org) <thorsten.vocks@big-"
-"consulting.net>\n"
+"PO-Revision-Date: 2014-01-18 22:27+0000\n"
+"Last-Translator: Ralf Hilgenstock <rh@dialoge.info>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-21 05:50+0000\n"
-"X-Generator: Launchpad (build 16831)\n"
+"X-Launchpad-Export-Date: 2014-01-19 05:58+0000\n"
+"X-Generator: Launchpad (build 16901)\n"
 
 #. module: account
 #: model:process.transition,name:account.process_transition_supplierreconcilepaid0
@@ -36,7 +35,7 @@ msgid ""
 "Generic Reporting \\ Taxes \\ Taxes Report'"
 msgstr ""
 "Legen Sie die Reihenfolge der Anzeige im Bericht  'Finanzen \\ Berichte \\ "
-"Standard Auswertungen \\ Steuern \\ Umsatzsteuer Anmeldung' fest"
+"Standard Auswertungen \\ Steuern \\ Umsatzsteuer-Anmeldung' fest"
 
 #. module: account
 #: view:res.partner:0
@@ -163,7 +162,7 @@ msgstr "Achtung!"
 #: code:addons/account/account.py:3197
 #, python-format
 msgid "Miscellaneous Journal"
-msgstr "\"verschiedenes\" Journal"
+msgstr "\"Verschiedenes\"-Journal"
 
 #. module: account
 #: code:addons/account/wizard/account_open_closed_fiscalyear.py:39
@@ -227,7 +226,7 @@ msgid ""
 msgstr ""
 "Definieren Sie den Kostenstellentyp. Wenn durch einen Beleg (z.B. eine "
 "Rechnung) zusätzlich zu den Finanzbuchungen auch Kostenstellen gebucht "
-"werden sollen, prüft OpenERP ob ein Kostenstellen Journal der gleichen Art "
+"werden sollen, prüft OpenERP ob ein Kostenstellen-Journal der gleichen Art "
 "(z.B. Verkauf) vorliegt."
 
 #. module: account
@@ -244,7 +243,7 @@ msgstr ""
 #: model:ir.actions.act_window,name:account.action_account_tax_template_form
 #: model:ir.ui.menu,name:account.menu_action_account_tax_template_form
 msgid "Tax Templates"
-msgstr "Umsatzsteuer Vorlagen"
+msgstr "Umsatzsteuer-Vorlagen"
 
 #. module: account
 #: model:ir.model,name:account.model_account_move_line_reconcile_select
@@ -294,7 +293,7 @@ msgid ""
 "sales, purchase, expense, contra, etc.\n"
 "                This installs the module account_voucher."
 msgstr ""
-"Ermöglicht erfassen und buchen  Ihrer Bankbelege, Kassenquittungen, Belege "
+"Ermöglicht Erfassen und Buchen Ihrer Bankbelege, Kassenquittungen, Belege "
 "für Verkauf, Einkauf, Spesen, Gutschriften etc.\n"
 "                 Hierdurch installieren Sie das Modul account_voucher."
 
@@ -385,7 +384,7 @@ msgstr "Multiwährungsfunktion aktivieren"
 #: code:addons/account/account_invoice.py:77
 #, python-format
 msgid "You must define an analytic journal of type '%s'!"
-msgstr "Sie müssen ein Kostenstellen Journal vom Typ '%s' definieren!"
+msgstr "Sie müssen ein Kostenstellen-Journal vom Typ '%s' definieren!"
 
 #. module: account
 #: selection:account.entries.report,month:0
@@ -499,7 +498,7 @@ msgstr "Periode:"
 #: field:account.tax.template,chart_template_id:0
 #: field:wizard.multi.charts.accounts,chart_template_id:0
 msgid "Chart Template"
-msgstr "Kontenplan Vorlage"
+msgstr ""
 
 #. module: account
 #: selection:account.invoice.refund,filter_refund:0
@@ -524,7 +523,7 @@ msgstr ""
 "gerundet, um abschließend die Steuer des Auftrags über die Summe der "
 "einzelnen Auftragszeilen zu berechnen. Bei Auswahl 'Global Runden': Die "
 "Steuern werden je Zeile berechnet, summiert und abschließend global für den "
-"gesamten Auftrag gerundet. Falls  Sie zu Brutto Preisen inklusive Steuern "
+"gesamten Auftrag gerundet. Falls  Sie zu Bruttopreisen inklusive Steuern "
 "verkaufen möchten, sollten Sie 'Runden pro Zeile' einstellen, um "
 "sicherzustellen dass der Gesamtbetrag des Auftrags der Summe aller einzelnen "
 "Auftragszeilen entspricht."
@@ -542,7 +541,7 @@ msgstr "In alternativer Währung dargestellter Betrag"
 #. module: account
 #: view:account.journal:0
 msgid "Available Coins"
-msgstr "Bargeld Stückelung"
+msgstr "Bargeldstückelung"
 
 #. module: account
 #: field:accounting.report,enable_filter:0
@@ -595,7 +594,7 @@ msgstr "Oberkonto"
 #. module: account
 #: help:account.invoice.line,sequence:0
 msgid "Gives the sequence of this line when displaying the invoice."
-msgstr "Anzeigerreihenfolge der Rechnungspositionen"
+msgstr "Anzeigereihenfolge der Rechnungspositionen"
 
 #. module: account
 #: field:account.bank.statement,account_id:0
@@ -646,7 +645,7 @@ msgstr "Gegenbuchung"
 #: field:account.fiscal.position,tax_ids:0
 #: field:account.fiscal.position.template,tax_ids:0
 msgid "Tax Mapping"
-msgstr "Steuer Zuordnung"
+msgstr "Steuerzuordnung"
 
 #. module: account
 #: model:ir.actions.act_window,name:account.action_account_fiscalyear_close_state
@@ -706,7 +705,7 @@ msgstr ""
 #: view:account.fiscal.position:0
 #: view:account.fiscal.position.template:0
 msgid "Taxes Mapping"
-msgstr "Steuern Zuordnung"
+msgstr "Steuerzuordnung"
 
 #. module: account
 #: report:account.central.journal:0
@@ -750,7 +749,7 @@ msgid ""
 msgstr ""
 "Datum, an dem das Konto des Partners vollständig ausgeglichen wurde. Dieses "
 "Datum unterscheidet sich vom Tag der jüngsten Zahlung, durch die Tatsache, "
-"dass keine weiteren offenen Rechnungen vorhanden sind. Dies kann auf 2 "
+"dass keine weiteren offenen Rechnungen vorhanden sind. Dies kann auf zwei "
 "verschiedene Arten erfolgen: Entweder wurde tatsächlich die aktuell letzte "
 "verfügbare Rechnung für den Partner ausgeglichen, oder der Benutzer hat "
 "während des Ausgleichs auf den Button \"keine weiteren Ausgleiche "
@@ -759,7 +758,7 @@ msgstr ""
 #. module: account
 #: model:ir.model,name:account.model_report_account_type_sales
 msgid "Report of the Sales by Account Type"
-msgstr "Auswertung Verkauf nach Kontentyp"
+msgstr "Auswertung: Verkauf nach Kontentyp"
 
 #. module: account
 #: code:addons/account/account.py:3201
@@ -861,7 +860,7 @@ msgid ""
 "change the date or remove this constraint from the journal."
 msgstr ""
 "Das Datum Ihrer Buchung fällt nicht in die festgelegte Periode. Sie müssen "
-"das Datum anpassen, oder diese Einschränkung vom Bericht entfernen."
+"das Datum anpassen oder diese Einschränkung vom Bericht entfernen."
 
 #. module: account
 #: model:ir.model,name:account.model_account_report_general_ledger
@@ -996,12 +995,12 @@ msgstr "Stornierung des OP-Ausgleichs"
 #. module: account
 #: model:ir.model,name:account.model_account_analytic_journal_report
 msgid "Account Analytic Journal"
-msgstr "Kostenstellen Journal"
+msgstr "Kostenstellenjournal"
 
 #. module: account
 #: view:account.invoice:0
 msgid "Send by Email"
-msgstr "E-mail senden"
+msgstr "Per E-Mail versenden"
 
 #. module: account
 #: help:account.central.journal,amount_currency:0
@@ -1193,7 +1192,7 @@ msgid ""
 msgstr ""
 "Wenn das Steuerkonto auch Bestandteil des Steuerkontenplans ist,  weist "
 "dieses Konto auch einen Betrag im Feld Steuern auf. Dieses Feld weist in "
-"diesem Fall dann den Messbetrag, i.d.R. den Netto Rechnungsbetrag auf, der "
+"diesem Fall dann den Messbetrag, i.d.R. den Netto-Rechnungsbetrag auf, der "
 "dann die Basis für die Steuerberechnung ist."
 
 #. module: account
@@ -1236,7 +1235,7 @@ msgstr "Funktionen"
 #: code:addons/account/account_move_line.py:195
 #, python-format
 msgid "No Analytic Journal !"
-msgstr "Kein Kostenstellen Journal"
+msgstr "Kein Kostenstellen-Journal"
 
 #. module: account
 #: report:account.partner.balance:0
@@ -1244,7 +1243,7 @@ msgstr "Kein Kostenstellen Journal"
 #: model:ir.actions.report.xml,name:account.account_3rdparty_account_balance
 #: model:ir.ui.menu,name:account.menu_account_partner_balance_report
 msgid "Partner Balance"
-msgstr "Partner Saldenliste"
+msgstr "Partner-Saldenliste"
 
 #. module: account
 #: model:ir.actions.act_window,help:account.action_account_gain_loss
@@ -1279,7 +1278,7 @@ msgstr ""
 #. module: account
 #: field:account.bank.accounts.wizard,acc_name:0
 msgid "Account Name."
-msgstr "Konto Bezeichnung"
+msgstr "Kontenbezeichnung"
 
 #. module: account
 #: field:account.journal,with_last_closing_balance:0
@@ -1350,7 +1349,7 @@ msgstr "Barkassen"
 #. module: account
 #: field:account.config.settings,sale_refund_journal_id:0
 msgid "Sale refund journal"
-msgstr "Kundengutschriften Journal"
+msgstr "Kundengutschriften-Journal"
 
 #. module: account
 #: model:ir.actions.act_window,help:account.action_view_bank_statement_tree
@@ -1403,7 +1402,7 @@ msgstr "Gutschriften"
 #. module: account
 #: model:process.transition,name:account.process_transition_confirmstatementfromdraft0
 msgid "Confirm statement"
-msgstr "Bestätige Bankauszug"
+msgstr "Bankauszug bestätigen"
 
 #. module: account
 #: help:account.account,foreign_balance:0
@@ -1493,7 +1492,7 @@ msgstr "Buchungstext"
 #: help:account.invoice,origin:0
 #: help:account.invoice.line,origin:0
 msgid "Reference of the document that produced this invoice."
-msgstr "Referenz Dokumente der Rechnung"
+msgstr "Referenzdokumente der Rechnung"
 
 #. module: account
 #: view:account.analytic.line:0
@@ -1667,7 +1666,7 @@ msgstr "Status Rechnung"
 #: model:ir.actions.act_window,name:account.action_account_open_closed_fiscalyear
 #: model:ir.ui.menu,name:account.menu_wizard_account_open_closed_fiscalyear
 msgid "Cancel Closing Entries"
-msgstr "Abbrechen Abschlussbuchungen"
+msgstr "Abschlussbuchungen abbrechen"
 
 #. module: account
 #: view:account.bank.statement:0
@@ -1776,7 +1775,7 @@ msgstr "Gutschrift"
 #. module: account
 #: view:account.config.settings:0
 msgid "eInvoicing & Payments"
-msgstr "eRechnung & Zahlungen"
+msgstr "E-Rechnungen & Zahlungen"
 
 #. module: account
 #: view:account.analytic.cost.ledger.journal.report:0
@@ -1881,7 +1880,7 @@ msgstr "Bankauszüge durchsuchen"
 #. module: account
 #: view:account.move.line:0
 msgid "Unposted Journal Items"
-msgstr "Nicht Verbuchte Journaleinträge"
+msgstr "Nicht verbuchte Journaleinträge"
 
 #. module: account
 #: view:account.chart.template:0
@@ -1941,9 +1940,9 @@ msgid ""
 "            "
 msgstr ""
 "<p class=\"oe_view_nocontent_create\">\n"
-"                Klicken Sie um einen neuen Kontotyp zu erstellen.\n"
+"                Klicken Sie um einen neuen Kontentyp zu erstellen.\n"
 "              </p><p>\n"
-"                Der Kontotyp legt fest, wie ein Konto in einem "
+"                Der Kontentyp legt fest, wie ein Konto in einem "
 "Buchungsjournal  \n"
 "                angewendet wird. Die Abgrenzungs-Methode eines Kontos "
 "bestimmt\n"
@@ -2007,7 +2006,7 @@ msgstr ""
 "gerundet, um abschließend die Steuer des Auftrags über die Summe der "
 "einzelnen Auftragszeilen zu berechnen. Bei Auswahl 'Global Runden': Die "
 "Steuern werden je Zeile berechnet, summiert und abschließend global für den "
-"gesamten Auftrag gerundet. Falls Sie zu Brutto Preisen inklusive Steuern "
+"gesamten Auftrag gerundet. Falls Sie zu Bruttopreisen inklusive Steuern "
 "verkaufen möchten, sollten Sie 'Runden pro Zeile' einstellen, um "
 "sicherzustellen dass der Gesamtbetrag des Auftrags der Summe aller einzelnen "
 "Auftragszeilen entspricht."
@@ -2016,7 +2015,7 @@ msgstr ""
 #: model:ir.actions.act_window,name:account.action_report_account_type_sales_tree_all
 #: view:report.account_type.sales:0
 msgid "Sales by Account Type"
-msgstr "Verkäufe nach Kontotypen"
+msgstr "Verkäufe nach Kontentypen"
 
 #. module: account
 #: model:account.payment.term,name:account.account_payment_term_15days
@@ -2166,7 +2165,7 @@ msgstr "Rechnung bestätigt"
 #. module: account
 #: field:account.config.settings,module_account_check_writing:0
 msgid "Pay your suppliers by check"
-msgstr "Lieferantenzahlung durch Scheck"
+msgstr ""
 
 #. module: account
 #: field:account.move.line.reconcile,credit:0
@@ -2357,7 +2356,7 @@ msgstr ""
 #. module: account
 #: field:account.config.settings,currency_id:0
 msgid "Default company currency"
-msgstr "Standard Währung"
+msgstr "Standardwährung"
 
 #. module: account
 #: field:account.invoice,move_id:0
@@ -2407,7 +2406,7 @@ msgstr "Gültig"
 #: field:account.bank.statement,message_follower_ids:0
 #: field:account.invoice,message_follower_ids:0
 msgid "Followers"
-msgstr "Followers"
+msgstr "Follower"
 
 #. module: account
 #: model:ir.actions.act_window,name:account.action_account_print_journal
