--- a/crm/i18n/ja.po
+++ b/crm/i18n/ja.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-01-07 16:56+0000\n"
-"PO-Revision-Date: 2014-01-12 14:31+0000\n"
+"PO-Revision-Date: 2014-01-19 03:31+0000\n"
 "Last-Translator: hiro TAKADA <tkhiro0712@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-01-13 05:59+0000\n"
-"X-Generator: Launchpad (build 16890)\n"
+"X-Launchpad-Export-Date: 2014-01-19 05:59+0000\n"
+"X-Generator: Launchpad (build 16901)\n"
 
 #. module: crm
 #: view:crm.lead.report:0
@@ -1042,7 +1042,7 @@ msgid ""
 "If opt-out is checked, this contact has refused to receive emails for mass "
 "mailing and marketing campaign. Filter 'Available for Mass Mailing' allows "
 "users to filter the leads when performing mass mailing."
-msgstr ""
+msgstr "オプトアウトをチェックした場合、大量メールとマーケティングキャンペーンのためのメールは受信が拒否されます。"
 
 #. module: crm
 #: code:addons/crm/crm_lead.py:712
