--- a/crm_helpdesk/i18n/de.po
+++ b/crm_helpdesk/i18n/de.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2014-01-18 12:17+0000\n"
+"PO-Revision-Date: 2014-01-19 11:24+0000\n"
 "Last-Translator: Ralf Hilgenstock <rh@dialoge.info>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-01-19 05:59+0000\n"
+"X-Launchpad-Export-Date: 2014-01-20 05:59+0000\n"
 "X-Generator: Launchpad (build 16901)\n"
 
 #. module: crm_helpdesk
@@ -462,15 +462,15 @@ msgstr ""
 "                Klicken Sie zur Erstellung einer neuen Anfrage an Ihren "
 "Kundendienst.\n"
 "              </p><p>\n"
-"                Im Kundendienst können Sie alle Beratungs- und Support-"
-"Vorfälle verfolgen.\n"
+"                Im Kundendienst können Sie alle Beratungs- und Supportfälle "
+"verfolgen.\n"
 "              </p><p>\n"
-"                Benutzen Sie die OpenERP Kundendienstvorfälle für das "
+"                Benutzen Sie die OpenERP Kundendienstfälle für das "
 "Management Ihrer\n"
 "                Kundenberatung und den Support. Durch Verbindung mit dem E-"
 "Mail Gateway \n"
-"                können Vorfälle automatisch erzeugt werden. Praktisch ist "
-"dabei auch die \n"
+"                können Fälle automatisch erzeugt werden. Praktisch ist dabei "
+"auch die \n"
 "                Möglichkeit, die gesamte Historie einzusehen, weiter zu "
 "verfolgen oder \n"
 "                auch auszuwerten.\n"
