--- a/account/i18n/de.po
+++ b/account/i18n/de.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2014-01-18 22:27+0000\n"
+"PO-Revision-Date: 2014-01-19 19:20+0000\n"
 "Last-Translator: Ralf Hilgenstock <rh@dialoge.info>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-01-19 05:58+0000\n"
+"X-Launchpad-Export-Date: 2014-01-20 05:59+0000\n"
 "X-Generator: Launchpad (build 16901)\n"
 
 #. module: account
@@ -962,7 +962,7 @@ msgid ""
 "Click on compute button."
 msgstr ""
 "Steuern fehlen!\n"
-"Drücken Sie auf den \"aktualisieren\" Knopf"
+"Drücken Sie auf den \"Aktualisieren\"-Button"
 
 #. module: account
 #: model:ir.model,name:account.model_account_subscription_line
@@ -3162,7 +3162,7 @@ msgstr ""
 #. module: account
 #: sql_constraint:account.model.line:0
 msgid "Wrong credit or debit value in model, they must be positive!"
-msgstr "Soll und Haben Beträge müssen positiv sein"
+msgstr "Soll- und Haben-Beträge müssen positiv sein"
 
 #. module: account
 #: model:process.node,note:account.process_node_reconciliation0
@@ -3238,7 +3238,7 @@ msgstr "Daten"
 #. module: account
 #: field:account.chart.template,parent_id:0
 msgid "Parent Chart Template"
-msgstr "Übergeordnete Kontenplan Vorlage"
+msgstr "Übergeordnete Kontenplanvorlage"
 
 #. module: account
 #: field:account.tax,parent_id:0
@@ -3347,7 +3347,7 @@ msgstr "Verkauf Journal"
 #: code:addons/account/account_move_line.py:195
 #, python-format
 msgid "You have to define an analytic journal on the '%s' journal!"
-msgstr "Sie müssen ein Kostenstellen Journal im '%s' Journal definieren!"
+msgstr "Sie müssen ein Kostenstellenjournal im '%s' Journal definieren!"
 
 #. module: account
 #: code:addons/account/account.py:781
@@ -3366,8 +3366,8 @@ msgid ""
 "You need an Opening journal with centralisation checked to set the initial "
 "balance."
 msgstr ""
-"Sie benötigen ein Jahreswechsel Journal mit der Einstellung "
-"\"Zentralisierung Gegenkonto\" für die Buchung der Jahreseröffnung."
+"Sie benötigen ein Jahreswechseljournal mit der Einstellung \"Zentralisierung "
+"Gegenkonto\" für die Buchung der Jahreseröffnung."
 
 #. module: account
 #: model:ir.actions.act_window,name:account.action_tax_code_list
@@ -3440,7 +3440,7 @@ msgstr "Nicht abgestimmte Buchungen"
 #. module: account
 #: field:wizard.multi.charts.accounts,only_one_chart_template:0
 msgid "Only One Chart Template Available"
-msgstr "Es ist nur eine Kontoplan Vorlage verfügbar"
+msgstr "Es ist nur eine Kontoplanvorlage verfügbar"
 
 #. module: account
 #: view:account.chart.template:0
@@ -3472,7 +3472,7 @@ msgstr ""
 #. module: account
 #: field:account.config.settings,date_stop:0
 msgid "End date"
-msgstr "Ende Datum"
+msgstr "Enddatum"
 
 #. module: account
 #: field:account.invoice.tax,base_amount:0
@@ -3482,7 +3482,7 @@ msgstr "Steuergrundlage Betrag"
 #. module: account
 #: field:wizard.multi.charts.accounts,sale_tax:0
 msgid "Default Sale Tax"
-msgstr "Standard Steuer Verkauf"
+msgstr "Standardsteuer Verkauf"
 
 #. module: account
 #: help:account.model.line,date_maturity:0
@@ -3613,7 +3613,7 @@ msgid ""
 "software system you may have to use the rate at date. Incoming transactions "
 "always use the rate at date."
 msgstr ""
-"Dies bestimmt,wie der Wechselkurs für ausgehende Transaktionen berechnet "
+"Dies bestimmt, wie der Wechselkurs für ausgehende Transaktionen berechnet "
 "wird. In den meisten Ländern ist \"Durchschnitt\" die legale Methode, aber "
 "nur wenige Systeme können dies. Für Importe von anderen Systemen muss daher "
 "ggf. der Tageskurs verwendet werden. Eingehende Transkationen verwenden "
@@ -3674,7 +3674,7 @@ msgstr "Modell"
 #. module: account
 #: help:account.invoice.tax,base_code_id:0
 msgid "The account basis of the tax declaration."
-msgstr "Das Basis Konto für die Steuererklärung"
+msgstr "Das Basiskonto für die Steuererklärung"
 
 #. module: account
 #: selection:account.account,type:0
@@ -3694,7 +3694,7 @@ msgstr "BNK"
 #. module: account
 #: field:account.move.line,analytic_lines:0
 msgid "Analytic lines"
-msgstr "Kostenstellen Buchungen"
+msgstr "Kostenstellen-Buchungen"
 
 #. module: account
 #: view:account.invoice:0
@@ -3952,7 +3952,7 @@ msgstr ""
 "werden.\n"
 "'Saldo' bedeutet, dass ein aktueller Saldo zum Stichtag des Jahreswechsels "
 "als Eröffnung im Folgejahr gebucht wird (z.B. bei Kasse, Bank).\n"
-"'Alle Buchungen' bedeutet dass ausnahmslos, alle Buchungen auf dem Konto in "
+"'Alle Buchungen' bedeutet, dass ausnahmslos alle Buchungen auf dem Konto in "
 "das Folgejahr transferiert werden.\n"
 "'Offene Posten' kopiert alle Journalbuchungen, die nicht ausgegelichen sind "
 "auf den ersten Tag der ersten Periode des neuen Geschäftsjahres."
@@ -4114,8 +4114,8 @@ msgid ""
 "quotations with a button \"Pay with  Paypal\" in automated emails or through "
 "the OpenERP portal."
 msgstr ""
-"Paypal Konto (E-Mail) für den Empfang von Online Zahlungen (Kreditkarte "
-"etc.) Durch Hinterlegen des Paypal Kontos kann ein Kunde durch einfachen "
+"Paypal-Konto (E-Mail) für den Empfang von Online Zahlungen (Kreditkarte "
+"etc.) Durch Hinterlegen des Paypal-Kontos kann ein Kunde durch einfachen "
 "Klick auf den Button \"Bezahlen mit Paypal\" die offenen Positionen auf dem "
 "Konto einsehen und begleichen."
 
@@ -4145,7 +4145,7 @@ msgstr "OP-Ausgleich stornieren"
 #: field:account.tax.code,notprintable:0
 #: field:account.tax.code.template,notprintable:0
 msgid "Not Printable in Invoice"
-msgstr "Nicht Druckbar in Rechnung"
+msgstr "Nicht druckbar in Rechnung"
 
 #. module: account
 #: report:account.vat.declaration:0
@@ -4186,7 +4186,7 @@ msgstr ""
 "Sie können folgendermassen vorgehen:\n"
 "                                    Direkt Gutschrift buchen oder zuerst im "
 "Entwurf belassen, \n"
-"                                    um zuerst den Original Beleg von\n"
+"                                    um zuerst den Originalbeleg von\n"
 "                                    Ihrem Kunden / Lieferanten zu erhalten."
 
 #. module: account
@@ -4263,7 +4263,7 @@ msgstr ""
 "              </p><p>\n"
 "                Der elektronische Rechnungsversand erleichtert und "
 "beschleunigt nochmals den \n"
-"                Zahlungsausgleich. Ihre Kunden bekommen per E-Mail "
+"                Zahlungsausgleich. Ihre Kunden bekommen per E-Mail-"
 "Rechnungen gesendet, die\n"
 "                dann auf schnellem Weg Online bezahlt werden können und/oder "
 "in das eigene \n"
@@ -4333,7 +4333,7 @@ msgid ""
 "Please create one from the configuration of the accounting menu."
 msgstr ""
 "Für dieses Datum wurde noch kein Geschäftsjahr angelegt:\n"
-"Bitte erstellen Sie ein Datum über das Konfiguration Menü der Finanzen."
+"Bitte erstellen Sie ein Datum über das Konfigurationsmenü der Finanzen."
 
 #. module: account
 #: view:account.addtmpl.wizard:0
@@ -4665,7 +4665,7 @@ msgstr "Datum"
 #, python-format
 msgid "The journal must have default credit and debit account."
 msgstr ""
-"Das Journal sollte mindestens ein Standard Konto für Soll / Haben Buchungen "
+"Das Journal sollte mindestens ein Standardkonto für Soll-/ Haben-Buchungen "
 "beinhalten."
 
 #. module: account
@@ -4688,7 +4688,7 @@ msgstr "Nachrichten und Kommunikations-Historie"
 #. module: account
 #: help:account.journal,analytic_journal_id:0
 msgid "Journal for analytic entries"
-msgstr "Kostenstellen Journal"
+msgstr "Kostenstellen-Journal"
 
 #. module: account
 #: constraint:account.aged.trial.balance:0
@@ -4781,9 +4781,9 @@ msgid ""
 "debit/credit accounts, of type 'situation' and with a centralized "
 "counterpart."
 msgstr ""
-"Der beste Ansatz ist die Auswahl eines Jahreswechsel Journals, damit alle "
+"Der beste Ansatz ist die Auswahl eines Jahreswechsel-Journals, damit alle "
 "Eröffnungs- und Abschlussbuchungen in einem Journal zentral gebucht werden "
-"können. Beachten Sie zu diesem Zweck beim Journal Soll / Haben Konten des "
+"können. Beachten Sie zu diesem Zweck beim Journal Soll-/ Haben-Konten des "
 "Typs 'Jahreswechsel' zu hinterlegen, sowie 'Zentralisierung Gegenkonto' zu "
 "aktivieren."
 
@@ -4806,7 +4806,7 @@ msgstr "Wiederkehrende Buchungen"
 #. module: account
 #: field:account.partner.balance,display_partner:0
 msgid "Display Partners"
-msgstr "Anzeige Partner"
+msgstr "Partner anzeigen"
 
 #. module: account
 #: view:account.invoice:0
@@ -4862,7 +4862,7 @@ msgstr "Start Periode"
 #: field:account.tax.template,name:0
 #: report:account.vat.declaration:0
 msgid "Tax Name"
-msgstr "Steuer Bezeichnung"
+msgstr "Steuerbezeichnung"
 
 #. module: account
 #: view:account.config.settings:0
@@ -4936,9 +4936,9 @@ msgid ""
 "9.99 EUR, whereas a decimal precision of 4 will allow journal  entries like: "
 "0.0231 EUR."
 msgstr ""
-"Eine Nachkommastellen Genauigkeit von 2 ermöglicht Buchungen mit auf 2 "
+"Eine Nachkommastellengenauigkeit von 2 ermöglicht Buchungen mit auf 2 "
 "Stellen auf- oder abgerundeten Beträgen wie z.B. 9,99 EUR, eine "
-"Nachkommastellen Genauigkeit von 4 ermöglicht Buchungen wie z.B.: 0,0231 EUR."
+"Nachkommastellengenauigkeit von 4 ermöglicht Buchungen wie z.B.: 0,0231 EUR."
 
 #. module: account
 #: field:account.account,shortcut:0
@@ -5000,7 +5000,7 @@ msgstr "Storniere die ausgewählten Rechnungen"
 #, python-format
 msgid "You have to assign an analytic journal on the '%s' journal!"
 msgstr ""
-"Sie müssen ein Kostenstellen Journal für das Journal '%s' hinterlegen!"
+"Sie müssen ein Kostenstellenjournal für das Journal '%s' hinterlegen!"
 
 #. module: account
 #: model:process.transition,note:account.process_transition_supplieranalyticcost0
@@ -5067,8 +5067,8 @@ msgid ""
 "Cannot find a chart of account, you should create one from Settings\\"
 "Configuration\\Accounting menu."
 msgstr ""
-"Kontenplan kann nicht gefunden werden, sie sollten diesen über Einstellungen "
-"/ Konfiguration / Finanzen anlegen."
+"Kontenplan kann nicht gefunden werden, Sie sollten diesen über "
+"Einstellungen/ Konfiguration/ Finanzen anlegen."
 
 #. module: account
 #: field:account.entries.report,product_uom_id:0
@@ -5236,7 +5236,7 @@ msgstr "Haupt Titel 1 (fett, unterstrichen)"
 #: report:account.analytic.account.balance:0
 #: report:account.central.journal:0
 msgid "Account Name"
-msgstr "Konto Bezeichnung"
+msgstr "Kontenbezeichnung"
 
 #. module: account
 #: help:account.fiscalyear.close,report_name:0
@@ -5268,7 +5268,7 @@ msgstr "Storniere Abschreibung"
 #: view:account.account.template:0
 #: view:account.chart.template:0
 msgid "Account Template"
-msgstr "Konto Vorlage"
+msgstr "Kontenvorlage"
 
 #. module: account
 #: view:account.bank.statement:0
@@ -5408,7 +5408,7 @@ msgstr "Kontoarten Auswahl"
 #. module: account
 #: help:account.journal,default_credit_account_id:0
 msgid "It acts as a default account for credit amount"
-msgstr "Fungiert als Standardkonto für die Haben Buchung in diesem Journal"
+msgstr "Fungiert als Standardkonto für die Haben-Buchung in diesem Journal"
 
 #. module: account
 #: view:account.move.line:0
@@ -5436,7 +5436,7 @@ msgstr " (Kopieren)"
 #. module: account
 #: help:account.config.settings,group_proforma_invoices:0
 msgid "Allows you to put invoices in pro-forma state."
-msgstr "Ermöglicht Pro-Forma Abrechnung"
+msgstr "Ermöglicht Pro-Forma-Abrechnung"
 
 #. module: account
 #: view:account.journal:0
@@ -9460,11 +9460,11 @@ msgid ""
 "You should press this button to re-open it and let it continue its normal "
 "process after having resolved the eventual exceptions it may have created."
 msgstr ""
-"Diese  Schaltfläche gibt es nur, wenn die Rechnung bezahlt und voll "
-"ausgeglichen ist, aber das ermittelte  Ausgleichskennzeichen  falsch ist. "
-"D.h. der Ausgleich wurde Rückgängig gemacht. Damit kann die Rechnung wieder "
-"auf offen gesetzt werden und im normalen Arbeitsfluss weiter behandelt "
-"werden, nachdem eventuelle Ausnahmen bearbeitet wurden."
+"Diesen Button gibt es nur, wenn die Rechnung bezahlt und voll ausgeglichen "
+"ist, aber das ermittelte  Ausgleichskennzeichen  falsch ist. D.h. der "
+"Ausgleich wurde rückgängig gemacht. Damit kann die Rechnung wieder auf offen "
+"gesetzt werden und im normalen Workflow weiter behandelt werden, nachdem "
+"eventuelle Ausnahmen bearbeitet wurden."
 
 #. module: account
 #: model:ir.actions.act_window,help:account.action_account_journal_form
