--- a/crm/i18n/de.po
+++ b/crm/i18n/de.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-01-07 16:56+0000\n"
-"PO-Revision-Date: 2014-01-18 13:54+0000\n"
+"PO-Revision-Date: 2014-01-19 19:05+0000\n"
 "Last-Translator: Ralf Hilgenstock <rh@dialoge.info>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-01-19 05:58+0000\n"
+"X-Launchpad-Export-Date: 2014-01-20 05:59+0000\n"
 "X-Generator: Launchpad (build 16901)\n"
 
 #. module: crm
@@ -366,7 +366,7 @@ msgstr ""
 #. module: crm
 #: model:process.transition,name:crm.process_transition_opportunitymeeting0
 msgid "Opportunity Meeting"
-msgstr "Meeting mit Chance"
+msgstr "Meeting mit Verkaufschance"
 
 #. module: crm
 #: help:crm.lead.report,delay_close:0
@@ -1108,7 +1108,7 @@ msgstr "Berechnung Segmentierung"
 #: selection:crm.phonecall,priority:0
 #: selection:crm.phonecall.report,priority:0
 msgid "Lowest"
-msgstr "Sehr gering"
+msgstr "Niedrigst"
 
 #. module: crm
 #: field:crm.lead,create_date:0
@@ -1871,7 +1871,7 @@ msgstr "Priorität"
 #. module: crm
 #: model:ir.model,name:crm.model_crm_lead2opportunity_partner
 msgid "Lead To Opportunity Partner"
-msgstr "Interessent zu Chance Partner"
+msgstr "Interessent zu Verkaufschance"
 
 #. module: crm
 #: help:crm.lead,partner_id:0
@@ -2049,7 +2049,7 @@ msgstr "Zu erledigen"
 #: model:mail.message.subtype,name:crm.mt_lead_convert_to_opportunity
 #: model:mail.message.subtype,name:crm.mt_salesteam_lead_opportunity
 msgid "Lead to Opportunity"
-msgstr "Interessent zu Chance"
+msgstr "Interessent zu Verkaufschance"
 
 #. module: crm
 #: field:crm.lead,user_email:0
@@ -2077,7 +2077,7 @@ msgstr "Notiz"
 #: selection:crm.phonecall,priority:0
 #: selection:crm.phonecall.report,priority:0
 msgid "Low"
-msgstr "Gering"
+msgstr "Niedrig"
 
 #. module: crm
 #: selection:crm.case.stage,state:0
