--- a/crm_claim/i18n/de.po
+++ b/crm_claim/i18n/de.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2014-01-18 12:51+0000\n"
+"PO-Revision-Date: 2014-01-19 11:25+0000\n"
 "Last-Translator: Ralf Hilgenstock <rh@dialoge.info>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-01-19 05:59+0000\n"
+"X-Launchpad-Export-Date: 2014-01-20 05:59+0000\n"
 "X-Generator: Launchpad (build 16901)\n"
 
 #. module: crm_claim
@@ -872,7 +872,7 @@ msgstr "April"
 #. module: crm_claim
 #: view:crm.claim.report:0
 msgid "My Case(s)"
-msgstr "Eigene Vorfälle"
+msgstr "Eigene Fälle"
 
 #. module: crm_claim
 #: model:crm.claim.stage,name:crm_claim.stage_claim2
