--- a/purchase/i18n/ja.po
+++ b/purchase/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2014-01-26 15:18+0000\n"
+"PO-Revision-Date: 2014-01-27 06:46+0000\n"
 "Last-Translator: hiro TAKADA <tkhiro0712@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-01-27 05:45+0000\n"
+"X-Launchpad-Export-Date: 2014-01-28 07:03+0000\n"
 "X-Generator: Launchpad (build 16914)\n"
 
 #. module: purchase
@@ -663,7 +663,7 @@ msgstr "それは集荷は行われたことを示しています。"
 #: code:addons/purchase/purchase.py:588
 #, python-format
 msgid "Unable to cancel this purchase order."
-msgstr ""
+msgstr "この発注はキャンセルできません。"
 
 #. module: purchase
 #: model:ir.ui.menu,name:purchase.menu_procurement_management_invoice
@@ -1042,7 +1042,7 @@ msgstr "発注ダッシュボード"
 #: code:addons/purchase/purchase.py:582
 #, python-format
 msgid "First cancel all receptions related to this purchase order."
-msgstr ""
+msgstr "最初にこの発注に関連するすべての入荷をキャンセルしてください。"
 
 #. module: purchase
 #: view:purchase.order:0
