--- a/stock/i18n/ja.po
+++ b/stock/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2014-01-26 16:13+0000\n"
+"PO-Revision-Date: 2014-01-27 13:26+0000\n"
 "Last-Translator: hiro TAKADA <tkhiro0712@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-01-27 05:46+0000\n"
+"X-Launchpad-Export-Date: 2014-01-28 07:03+0000\n"
 "X-Generator: Launchpad (build 16914)\n"
 
 #. module: stock
@@ -1094,7 +1094,7 @@ msgstr "仕訳帳"
 #. module: stock
 #: model:ir.actions.act_window,name:stock.action_stock_invoice_onshipping
 msgid "Create Draft Invoices"
-msgstr ""
+msgstr "ドラフト請求書を作成"
 
 #. module: stock
 #: help:stock.picking,location_id:0
@@ -2305,7 +2305,7 @@ msgstr ""
 #. module: stock
 #: view:stock.picking:0
 msgid "Create Invoice/Refund"
-msgstr ""
+msgstr "請求書/払い戻しを作成"
 
 #. module: stock
 #: help:stock.picking,message_ids:0
@@ -2697,7 +2697,7 @@ msgstr "作成"
 #. module: stock
 #: field:stock.change.product.qty,new_quantity:0
 msgid "New Quantity on Hand"
-msgstr ""
+msgstr "手元の新しい数量"
 
 #. module: stock
 #: field:stock.move,priority:0
