--- a/product/i18n/am.po
+++ b/product/i18n/am.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2014-01-27 13:21+0000\n"
+"PO-Revision-Date: 2014-01-28 10:55+0000\n"
 "Last-Translator: biniyam <life2enough@gmail.com>\n"
 "Language-Team: Amharic <am@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-01-28 07:03+0000\n"
-"X-Generator: Launchpad (build 16914)\n"
+"X-Launchpad-Export-Date: 2014-01-29 06:03+0000\n"
+"X-Generator: Launchpad (build 16916)\n"
 
 #. module: product
 #: field:product.packaging,rows:0
@@ -2130,12 +2130,12 @@ msgstr ""
 #. module: product
 #: field:product.product,image:0
 msgid "Image"
-msgstr ""
+msgstr "ምስል"
 
 #. module: product
 #: view:product.uom.categ:0
 msgid "Units of Measure categories"
-msgstr ""
+msgstr "የመለክያዎች መደብ"
 
 #. module: product
 #: model:product.template,description_sale:product.product_product_4_product_template
@@ -2149,17 +2149,17 @@ msgstr ""
 #. module: product
 #: view:product.template:0
 msgid "Descriptions"
-msgstr ""
+msgstr "መግለጫዎች"
 
 #. module: product
 #: model:res.groups,name:product.group_stock_packaging
 msgid "Manage Product Packaging"
-msgstr ""
+msgstr "የታሸጉ እቃዎችን ተቆጣጣሪ"
 
 #. module: product
 #: model:product.category,name:product.product_category_2
 msgid "Internal"
-msgstr ""
+msgstr "ውስጥ"
 
 #. module: product
 #: model:product.template,name:product.product_product_45_product_template
@@ -2175,7 +2175,7 @@ msgstr ""
 #: selection:product.category,type:0
 #: selection:product.template,state:0
 msgid "Normal"
-msgstr ""
+msgstr "መደበኛ"
 
 #. module: product
 #: code:addons/product/pricelist.py:179
@@ -2188,7 +2188,7 @@ msgstr ""
 #. module: product
 #: field:product.pricelist.item,price_max_margin:0
 msgid "Max. Price Margin"
-msgstr ""
+msgstr "ክፍተኛ የዋጋ ጣርያ"
 
 #. module: product
 #: help:product.template,standard_price:0
@@ -2230,27 +2230,27 @@ msgstr ""
 #. module: product
 #: selection:product.template,mes_type:0
 msgid "Variable"
-msgstr ""
+msgstr "ተለዋዋጭ"
 
 #. module: product
 #: field:product.template,rental:0
 msgid "Can be Rent"
-msgstr ""
+msgstr "የሚከራይ"
 
 #. module: product
 #: model:product.price.type,name:product.standard_price
 msgid "Cost Price"
-msgstr ""
+msgstr "የመግዣ ዋጋ"
 
 #. module: product
 #: field:product.pricelist.item,price_min_margin:0
 msgid "Min. Price Margin"
-msgstr ""
+msgstr "ዝቅትኛው የዋጋ ወለል"
 
 #. module: product
 #: model:res.groups,name:product.group_uom
 msgid "Manage Multiple Units of Measure"
-msgstr ""
+msgstr "የተለያዩ የመለክያ አይነቶችን መቆጣጠር"
 
 #. module: product
 #: help:product.packaging,weight:0
