--- a/stock/i18n/ja.po
+++ b/stock/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2014-01-30 14:43+0000\n"
+"PO-Revision-Date: 2014-02-01 06:46+0000\n"
 "Last-Translator: hiro TAKADA <tkhiro0712@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-01-31 06:24+0000\n"
+"X-Launchpad-Export-Date: 2014-02-01 06:53+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: stock
@@ -1382,6 +1382,22 @@ msgid ""
 "* Available: When products are reserved, it is set to 'Available'.\n"
 "* Done: When the shipment is processed, the state is 'Done'."
 msgstr ""
+"* New: When the stock move is created and not yet confirmed.\n"
+"* 新規：在庫移動が作成されて、まだ確認されていない場合。\n"
+"\n"
+"* Waiting Another Move: This state can be seen when a move is waiting for "
+"another one, \n"
+"for example in a chained flow.\n"
+"* 別の移動待ち：この状態は連鎖フローのような別の移動を待つ場合を表します。\n"
+"\n"
+"* Waiting Availability: This state is reached when the procurement "
+"resolution is not straight forward. It may need the scheduler to run, a "
+"component to be manufactured...\n"
+"* 利用可能待ち：\n"
+"\n"
+"* Available: When products are reserved, it is set to 'Available'.\n"
+"\n"
+"* Done: When the shipment is processed, the state is 'Done'."
 
 #. module: stock
 #: model:stock.location,name:stock.stock_location_locations_partner
