--- a/account/i18n/ja.po
+++ b/account/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2014-01-28 02:19+0000\n"
+"PO-Revision-Date: 2014-02-01 09:09+0000\n"
 "Last-Translator: hiro TAKADA <tkhiro0712@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-01-29 06:03+0000\n"
+"X-Launchpad-Export-Date: 2014-02-02 05:59+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: account
@@ -9460,6 +9460,11 @@ msgid ""
 "related journal entries may or may not be reconciled.             \n"
 "* The 'Cancelled' status is used when user cancel invoice."
 msgstr ""
+" * 「ドラフト」状態はユーザーが新しくコード化されて請求書が未確認の場合に使用されます。\n"
+"* 請求が「試算」状態の場合、請求書は請求番号を持ちません。\n"
+"* 「オープン」状態はユーザーが請求書を作成する場合に使用され、請求番号が生成されます。ユーザーが請求を支払うまでは、この状態です。\n"
+"* 「支払済」状態は請求の支払いがあると自動で設定されます。関連する仕訳記入が消し込みされるとは限りません。\n"
+"* 「キャンセル済」状態はユーザーが請求をキャンセルした場合に使用されます。"
 
 #. module: account
 #: field:account.period,date_stop:0
