--- a/account_analytic_analysis/i18n/mn.po
+++ b/account_analytic_analysis/i18n/mn.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2014-01-18 18:09+0000\n"
+"PO-Revision-Date: 2014-02-01 16:53+0000\n"
 "Last-Translator: gobi <Unknown>\n"
 "Language-Team: Mongolian <mn@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-01-19 05:58+0000\n"
-"X-Generator: Launchpad (build 16901)\n"
+"X-Launchpad-Export-Date: 2014-02-02 05:59+0000\n"
+"X-Generator: Launchpad (build 16916)\n"
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
@@ -180,7 +180,7 @@ msgstr ""
 "дуусах өдөр хэтэрсэн эсвэл зөвшөөрөгдсөн хүн хүч хэтэрсэн гэрээнүүд юм.\n"
 "              </p><p>\n"
 "                OpenERP нь автоматаар шинэчлэх шаардлагатай гэрээнүүдийг "
-"хүлээж буй төлөвт оруулдаг. Тохиролцол явагдсан дараагаар борлуулалтын "
+"шийд хүлээсэн төлөвт оруулдаг. Тохиролцол явагдсан дараагаар борлуулалтын "
 "ажилтан гэрээг хаах юмуу шинэчилдэг.\n"
 "              </p>\n"
 "            "
@@ -304,7 +304,7 @@ msgstr "Сарын цагийн хураангуй"
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Pending contracts"
-msgstr "Хүлээгдэж буй гэрээнүүд"
+msgstr "Шийд хүлээсэн гэрээнүүд"
 
 #. module: account_analytic_analysis
 #: help:account.analytic.account,real_margin_rate:0
