--- a/hr_expense/i18n/mn.po
+++ b/hr_expense/i18n/mn.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2014-01-11 14:09+0000\n"
+"PO-Revision-Date: 2014-02-01 18:25+0000\n"
 "Last-Translator: gobi <Unknown>\n"
 "Language-Team: Mongolian <mn@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-01-12 05:48+0000\n"
-"X-Generator: Launchpad (build 16890)\n"
+"X-Launchpad-Export-Date: 2014-02-02 06:00+0000\n"
+"X-Generator: Launchpad (build 16916)\n"
 
 #. module: hr_expense
 #: view:hr.expense.expense:0
@@ -30,6 +30,7 @@ msgid ""
 "No purchase account found for the product %s (or for his category), please "
 "configure one."
 msgstr ""
+"%s бараа (эсвэл барааны төрөл)-д данс олдсонгүй, дансыг тохируулна уу."
 
 #. module: hr_expense
 #: model:ir.model,name:hr_expense.model_hr_expense_line
@@ -200,7 +201,7 @@ msgstr ""
 #. module: hr_expense
 #: view:hr.expense.expense:0
 msgid "Open Accounting Entries"
-msgstr ""
+msgstr "Санхүүгийн ажил гүйлгээнүүдийг нээх"
 
 #. module: hr_expense
 #: help:hr.expense.expense,message_unread:0
@@ -522,7 +523,7 @@ msgstr "Ажилчдын бүх зардлыг бүртгэх"
 #. module: hr_expense
 #: view:hr.expense.expense:0
 msgid "Free Notes"
-msgstr ""
+msgstr "Чөлөөт Тэмдэглэлүүд"
 
 #. module: hr_expense
 #: code:addons/hr_expense/hr_expense.py:453
@@ -556,7 +557,7 @@ msgstr "Ноорог"
 #. module: hr_expense
 #: selection:hr.expense.expense,state:0
 msgid "Paid"
-msgstr ""
+msgstr "Төлөгдсөн"
 
 #. module: hr_expense
 #: code:addons/hr_expense/hr_expense.py:353
@@ -688,7 +689,7 @@ msgstr "Хураангуй"
 #. module: hr_expense
 #: model:ir.model,name:hr_expense.model_account_move_line
 msgid "Journal Items"
-msgstr ""
+msgstr "Журналын бичилт"
 
 #. module: hr_expense
 #: model:product.template,name:hr_expense.car_travel_product_template
