--- a/hr_timesheet_invoice/i18n/mn.po
+++ b/hr_timesheet_invoice/i18n/mn.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-03-23 17:28+0000\n"
+"PO-Revision-Date: 2014-02-01 12:13+0000\n"
 "Last-Translator: gobi <Unknown>\n"
 "Language-Team: Mongolian <mn@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-21 06:14+0000\n"
-"X-Generator: Launchpad (build 16831)\n"
+"X-Launchpad-Export-Date: 2014-02-02 06:00+0000\n"
+"X-Generator: Launchpad (build 16916)\n"
 
 #. module: hr_timesheet_invoice
 #: view:report.timesheet.line:0
@@ -206,7 +206,7 @@ msgstr "Дуусах огноо хүртэлх мөчлөг"
 #. module: hr_timesheet_invoice
 #: model:ir.model,name:hr_timesheet_invoice.model_report_analytic_account_close
 msgid "Analytic account to close"
-msgstr "Хаах шаардлагатай аналитик данс"
+msgstr "Хаах шаардлагатай шинжилгээний данс"
 
 #. module: hr_timesheet_invoice
 #: help:account.analytic.account,to_invoice:0
@@ -234,7 +234,7 @@ msgstr "Данс бүрийн өдрөөр харах цаг бүртгэл"
 #: field:report_timesheet.account,account_id:0
 #: field:report_timesheet.account.date,account_id:0
 msgid "Analytic Account"
-msgstr "Аналитик данс"
+msgstr "Шинжилгээний Данс"
 
 #. module: hr_timesheet_invoice
 #: field:report.analytic.account.close,date_deadline:0
@@ -288,7 +288,7 @@ msgstr ""
 #: field:report.account.analytic.line.to.invoice,account_id:0
 #: field:report.analytic.account.close,name:0
 msgid "Analytic account"
-msgstr "Аналитик данс"
+msgstr "Шинжилгээний данс"
 
 #. module: hr_timesheet_invoice
 #: view:hr.timesheet.analytic.profit:0
@@ -332,7 +332,7 @@ msgstr "Үнийн нэхэмжлэл"
 #: model:ir.actions.report.xml,name:hr_timesheet_invoice.report_analytical_profit
 #: model:ir.ui.menu,name:hr_timesheet_invoice.menu_hr_timesheet_analytic_profit
 msgid "Timesheet Profit"
-msgstr "Цаг бүртгэлийн аналитик ашиг"
+msgstr "Цаг бүртгэлийн ашиг"
 
 #. module: hr_timesheet_invoice
 #: field:hr.timesheet.invoice.create,product:0
@@ -383,7 +383,7 @@ msgstr ""
 #. module: hr_timesheet_invoice
 #: model:ir.model,name:hr_timesheet_invoice.model_report_account_analytic_line_to_invoice
 msgid "Analytic lines to invoice report"
-msgstr "Аналитик мөрүүдийг нэхэмжлэлийн тайлан дээр харах"
+msgstr "Шинжилгээний мөрүүдийг нэхэмжлэлийн тайлан дээр харах"
 
 #. module: hr_timesheet_invoice
 #: model:ir.actions.act_window,name:hr_timesheet_invoice.action_timesheet_invoice_stat_all
@@ -394,7 +394,7 @@ msgstr "Цаг бүртгэлийг нэхэмжлэлээр харах"
 #: model:ir.actions.act_window,name:hr_timesheet_invoice.action_analytic_account_tree
 #: view:report.analytic.account.close:0
 msgid "Expired analytic accounts"
-msgstr "Хугацаа нь дууссан аналитик данснууд"
+msgstr "Хугацаа нь дууссан шинжилгээний данснууд"
 
 #. module: hr_timesheet_invoice
 #: field:hr_timesheet_invoice.factor,factor:0
@@ -643,7 +643,7 @@ msgstr "Бүгд :"
 #: model:ir.actions.act_window,name:hr_timesheet_invoice.action_account_analytic_line_to_invoice
 #: view:report.account.analytic.line.to.invoice:0
 msgid "Analytic Lines to Invoice"
-msgstr "Аналитик мөрөөс нэхэмжлэл рүү"
+msgstr "Нэхэмжлэх шаардлагатай шинжилгээний мөрүүд"
 
 #. module: hr_timesheet_invoice
 #: help:account.analytic.line,to_invoice:0
