--- a/stock/i18n/ja.po
+++ b/stock/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2014-02-01 06:46+0000\n"
+"PO-Revision-Date: 2014-02-02 03:21+0000\n"
 "Last-Translator: hiro TAKADA <tkhiro0712@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-01 06:53+0000\n"
+"X-Launchpad-Export-Date: 2014-02-02 06:00+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: stock
@@ -1382,22 +1382,11 @@ msgid ""
 "* Available: When products are reserved, it is set to 'Available'.\n"
 "* Done: When the shipment is processed, the state is 'Done'."
 msgstr ""
-"* New: When the stock move is created and not yet confirmed.\n"
-"* 新規：在庫移動が作成されて、まだ確認されていない場合。\n"
-"\n"
-"* Waiting Another Move: This state can be seen when a move is waiting for "
-"another one, \n"
-"for example in a chained flow.\n"
+"* 新規：在庫移動が作成されて、まだ確認されていない場合です。\n"
 "* 別の移動待ち：この状態は連鎖フローのような別の移動を待つ場合を表します。\n"
-"\n"
-"* Waiting Availability: This state is reached when the procurement "
-"resolution is not straight forward. It may need the scheduler to run, a "
-"component to be manufactured...\n"
-"* 利用可能待ち：\n"
-"\n"
-"* Available: When products are reserved, it is set to 'Available'.\n"
-"\n"
-"* Done: When the shipment is processed, the state is 'Done'."
+"* 利用可能待ち：部品の製造やスケジューラの実行が必要で調達の解決策が単純でない場合、この状態になります。\n"
+"* 利用可能：製品が確保されると「利用可能」に設定されます。\n"
+"* 完了：出荷が処理されると状態は「完了」になります。"
 
 #. module: stock
 #: model:stock.location,name:stock.stock_location_locations_partner
@@ -3657,7 +3646,7 @@ msgid ""
 "                 * Cancelled: has been cancelled, can't be confirmed anymore"
 msgstr ""
 "* ドラフト：まだ確認されておらず、確認されるまでスケジュールされません。\n"
-"* 別の工程待ち：自動で利用可能になる前に受注生産フローのような進行する別の動きを待ちます。\n"
+"* 別の工程待ち：自動で利用可能になる前に、受注生産フローのような進行する別の動きを待ちます。\n"
 "* 利用可能待ち：製品が利用可能になるまで待ち続けます。\n"
 "* 入荷待ち：予約された製品の確認を待ちます。\n"
 "* 入荷済：処理されたため変更やキャンセルはできません。\n"
