--- a/mrp_operations/i18n/ja.po
+++ b/mrp_operations/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2014-02-08 10:32+0000\n"
+"PO-Revision-Date: 2014-02-09 13:02+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-09 06:51+0000\n"
+"X-Launchpad-Export-Date: 2014-02-10 05:53+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: mrp_operations
@@ -238,7 +238,7 @@ msgstr "作業オーダー分析"
 #. module: mrp_operations
 #: model:ir.ui.menu,name:mrp_operations.menu_mrp_production_wc_action_planning
 msgid "Work Orders By Resource"
-msgstr ""
+msgstr "リソース別作業オーダ"
 
 #. module: mrp_operations
 #: view:mrp.production.workcenter.line:0
