--- a/stock/i18n/ja.po
+++ b/stock/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-02-06 15:56+0000\n"
-"PO-Revision-Date: 2014-02-08 10:41+0000\n"
-"Last-Translator: hiro TAKADA <tkhiro0712@gmail.com>\n"
+"PO-Revision-Date: 2014-02-09 15:58+0000\n"
+"Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-09 06:52+0000\n"
+"X-Launchpad-Export-Date: 2014-02-10 05:53+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: stock
@@ -503,7 +503,7 @@ msgstr "入荷待ち"
 #: view:stock.production.lot:0
 #: field:stock.production.lot,stock_available:0
 msgid "Available"
-msgstr "出荷可能"
+msgstr "処理可能"
 
 #. module: stock
 #: view:stock.picking:0
@@ -1219,7 +1219,7 @@ msgstr ""
 #. module: stock
 #: view:stock.config.settings:0
 msgid "Apply"
-msgstr ""
+msgstr "適用"
 
 #. module: stock
 #: field:product.template,loc_row:0
@@ -2112,7 +2112,7 @@ msgstr "ロット番号"
 #: model:ir.actions.act_window,name:stock.action_deliver_move
 #: view:product.product:0
 msgid "Deliveries"
-msgstr ""
+msgstr "配送"
 
 #. module: stock
 #: model:ir.actions.act_window,help:stock.action_reception_picking_move
@@ -2416,7 +2416,7 @@ msgstr "出荷タイプの定義、商品は入ってくるのか出て行くの
 #. module: stock
 #: view:stock.config.settings:0
 msgid "Accounting"
-msgstr ""
+msgstr "会計"
 
 #. module: stock
 #: model:ir.ui.menu,name:stock.menu_warehouse_config
@@ -4704,13 +4704,13 @@ msgstr ""
 #. module: stock
 #: view:stock.picking.out:0
 msgid "Deliver"
-msgstr ""
+msgstr "配送"
 
 #. module: stock
 #: view:product.product:0
 #: field:product.product,delivery_count:0
 msgid "Delivery"
-msgstr ""
+msgstr "配送"
 
 #. module: stock
 #: view:stock.fill.inventory:0
