--- a/mail/i18n/fi.po
+++ b/mail/i18n/fi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-12-01 21:33+0000\n"
+"PO-Revision-Date: 2014-02-15 21:27+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-12-02 05:51+0000\n"
-"X-Generator: Launchpad (build 16856)\n"
+"X-Launchpad-Export-Date: 2014-02-16 06:42+0000\n"
+"X-Generator: Launchpad (build 16916)\n"
 
 #. module: mail
 #: view:mail.followers:0
@@ -109,7 +109,7 @@ msgstr "Julkinen"
 #: code:addons/mail/static/src/xml/mail.xml:277
 #, python-format
 msgid "to"
-msgstr "vastaanottaja"
+msgstr "lähetti vastaanottajalle"
 
 #. module: mail
 #: view:mail.mail:0
@@ -822,7 +822,7 @@ msgstr "lue vähemmän"
 #: code:addons/mail/static/src/xml/mail.xml:337
 #, python-format
 msgid "like"
-msgstr "kuten"
+msgstr "pidän"
 
 #. module: mail
 #: view:mail.compose.message:0
@@ -1777,7 +1777,7 @@ msgstr ""
 #: code:addons/mail/static/src/xml/mail.xml:338
 #, python-format
 msgid "unlike"
-msgstr ""
+msgstr "en pidä"
 
 #. module: mail
 #: model:ir.model,name:mail.model_mail_group
