--- a/stock/i18n/ja.po
+++ b/stock/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-02-06 15:56+0000\n"
-"PO-Revision-Date: 2014-02-16 14:08+0000\n"
+"PO-Revision-Date: 2014-02-18 18:05+0000\n"
 "Last-Translator: hiro TAKADA <tkhiro0712@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-17 06:03+0000\n"
+"X-Launchpad-Export-Date: 2014-02-19 05:40+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: stock
@@ -614,6 +614,13 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                クリックして内部移動要求を作成してください。\n"
+"              </p><p>\n"
+"                "
+"ほとんどの操作は事前に設定した物流ルールにしたがってOpenERPが自動で行いますが、マニュアルで在庫移動することもできます。\n"
+"              </p>\n"
+"            "
 
 #. module: stock
 #: model:ir.actions.report.xml,name:stock.report_move_labels
