--- a/account_voucher/i18n/fi.po
+++ b/account_voucher/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2014-02-11 22:32+0000\n"
+"PO-Revision-Date: 2014-02-18 15:36+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-12 06:23+0000\n"
+"X-Launchpad-Export-Date: 2014-02-19 05:40+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: account_voucher
@@ -222,7 +222,7 @@ msgstr "Eräpäivä"
 #. module: account_voucher
 #: field:account.voucher,narration:0
 msgid "Notes"
-msgstr ""
+msgstr "Muistiinpanot"
 
 #. module: account_voucher
 #: field:account.voucher,message_ids:0
@@ -1117,7 +1117,7 @@ msgstr ""
 #. module: account_voucher
 #: view:account.voucher:0
 msgid "Internal Notes"
-msgstr ""
+msgstr "Sisäiset muistiinpanot"
 
 #. module: account_voucher
 #: view:account.voucher:0
