--- a/crm/i18n/fi.po
+++ b/crm/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-01-07 16:56+0000\n"
-"PO-Revision-Date: 2014-02-11 23:17+0000\n"
+"PO-Revision-Date: 2014-02-18 20:59+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-12 06:23+0000\n"
+"X-Launchpad-Export-Date: 2014-02-19 05:40+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: crm
@@ -429,7 +429,7 @@ msgstr "Päivityksen päiväys"
 #. module: crm
 #: field:crm.case.section,user_id:0
 msgid "Team Leader"
-msgstr "Tiiminvetajä"
+msgstr "Tiiminvetäjä"
 
 #. module: crm
 #: help:crm.case.stage,probability:0
@@ -619,7 +619,7 @@ msgstr "Puhelujen määrä"
 #. module: crm
 #: sql_constraint:crm.case.section:0
 msgid "The code of the sales team must be unique !"
-msgstr "Myyntitiimin koodin tulee olla uniikki !"
+msgstr "Myyntitiimin koodin tulee olla ainutkertainen!"
 
 #. module: crm
 #: help:crm.lead,email_from:0
@@ -1710,7 +1710,7 @@ msgstr "Avausvuosi"
 #: view:crm.case.section:0
 #: field:crm.lead,description:0
 msgid "Notes"
-msgstr "Huomautukset"
+msgstr "Muistiinpanot"
 
 #. module: crm
 #: view:crm.opportunity2phonecall:0
@@ -2988,7 +2988,7 @@ msgstr ""
 #. module: crm
 #: view:crm.lead:0
 msgid "Internal Notes"
-msgstr ""
+msgstr "Sisäiset muistiinpanot"
 
 #. module: crm
 #: view:crm.lead:0
