--- a/procurement/i18n/am.po
+++ b/procurement/i18n/am.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2014-02-17 07:27+0000\n"
+"PO-Revision-Date: 2014-02-18 13:39+0000\n"
 "Last-Translator: biniyam <life2enough@gmail.com>\n"
 "Language-Team: Amharic <am@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-18 05:41+0000\n"
+"X-Launchpad-Export-Date: 2014-02-19 05:40+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: procurement
@@ -621,17 +621,17 @@ msgstr "ተከታይ ነው"
 #: code:addons/procurement/procurement.py:367
 #, python-format
 msgid "Not enough stock."
-msgstr ""
+msgstr "ብግምጃ ቤት ውስጥ በቂ እቃ የለም"
 
 #. module: procurement
 #: field:stock.warehouse.orderpoint,active:0
 msgid "Active"
-msgstr ""
+msgstr "ጥቅም ላይ ማዋል"
 
 #. module: procurement
 #: model:process.node,name:procurement.process_node_procureproducts0
 msgid "Procure Products"
-msgstr ""
+msgstr "የሚገዙ እቃዎች"
 
 #. module: procurement
 #: code:addons/procurement/procurement.py:312
@@ -644,7 +644,7 @@ msgstr ""
 #. module: procurement
 #: field:procurement.order,date_planned:0
 msgid "Scheduled date"
-msgstr ""
+msgstr "የቀጠሮ ቀን"
 
 #. module: procurement
 #: selection:procurement.order,state:0
@@ -672,7 +672,7 @@ msgstr ""
 #. module: procurement
 #: field:stock.warehouse.orderpoint,qty_multiple:0
 msgid "Qty Multiple"
-msgstr ""
+msgstr "ብዛት"
 
 #. module: procurement
 #: view:product.product:0
@@ -691,37 +691,37 @@ msgstr ""
 #. module: procurement
 #: model:ir.model,name:procurement.model_res_company
 msgid "Companies"
-msgstr ""
+msgstr "ድርጅት"
 
 #. module: procurement
 #: view:procurement.order:0
 msgid "Extra Information"
-msgstr ""
+msgstr "ተጨማሪ መረጃዎች"
 
 #. module: procurement
 #: field:procurement.order,message_summary:0
 msgid "Summary"
-msgstr ""
+msgstr "ማጠቃለያ"
 
 #. module: procurement
 #: sql_constraint:stock.warehouse.orderpoint:0
 msgid "Qty Multiple must be greater than zero."
-msgstr ""
+msgstr "የእቃው ብዛት ከዜሮ በላይ መሆን አለበት"
 
 #. module: procurement
 #: selection:stock.warehouse.orderpoint,logic:0
 msgid "Order to Max"
-msgstr ""
+msgstr "የትዛዙ ከፍተኛ ብዛት"
 
 #. module: procurement
 #: field:procurement.order,date_close:0
 msgid "Date Closed"
-msgstr ""
+msgstr "የመጨረሻው ቀን"
 
 #. module: procurement
 #: view:res.company:0
 msgid "Logistics"
-msgstr ""
+msgstr "ግዢ"
 
 #. module: procurement
 #: help:product.template,procure_method:0
@@ -734,30 +734,30 @@ msgstr ""
 #. module: procurement
 #: field:mrp.property,composition:0
 msgid "Properties composition"
-msgstr ""
+msgstr "የተለያዩ ቅንብሮች"
 
 #. module: procurement
 #: code:addons/procurement/procurement.py:311
 #, python-format
 msgid "Data Insufficient !"
-msgstr ""
+msgstr "በቂ ያልሆነ መረጃ"
 
 #. module: procurement
 #: model:ir.model,name:procurement.model_mrp_property_group
 #: field:mrp.property,group_id:0
 #: field:mrp.property.group,name:0
 msgid "Property Group"
-msgstr ""
+msgstr "የእቃው ምድብ"
 
 #. module: procurement
 #: view:stock.warehouse.orderpoint:0
 msgid "Misc"
-msgstr ""
+msgstr "የተለያዩ"
 
 #. module: procurement
 #: field:stock.move,procurements:0
 msgid "Procurements"
-msgstr ""
+msgstr "ግዥ"
 
 #. module: procurement
 #: view:procurement.order:0
@@ -767,7 +767,7 @@ msgstr ""
 #. module: procurement
 #: selection:procurement.order,state:0
 msgid "Done"
-msgstr ""
+msgstr "ተጠናቋል"
 
 #. module: procurement
 #: view:make.procurement:0
@@ -775,12 +775,12 @@ msgstr ""
 #: view:procurement.order.compute.all:0
 #: view:procurement.orderpoint.compute:0
 msgid "Cancel"
-msgstr ""
+msgstr "መሰረዝ"
 
 #. module: procurement
 #: field:stock.warehouse.orderpoint,logic:0
 msgid "Reordering Mode"
-msgstr ""
+msgstr "ማዘዣ"
 
 #. module: procurement
 #: field:procurement.order,origin:0
@@ -790,7 +790,7 @@ msgstr ""
 #. module: procurement
 #: selection:procurement.order,priority:0
 msgid "Not urgent"
-msgstr ""
+msgstr "አስቸኾይ ያልሆነ"
 
 #. module: procurement
 #: model:ir.actions.act_window,name:procurement.procurement_action5
