--- a/crm/i18n/fi.po
+++ b/crm/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-01-07 16:56+0000\n"
-"PO-Revision-Date: 2014-02-18 20:59+0000\n"
+"PO-Revision-Date: 2014-02-20 08:18+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-19 05:40+0000\n"
+"X-Launchpad-Export-Date: 2014-02-21 06:38+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: crm
@@ -277,7 +277,7 @@ msgstr "Kampanjat"
 #: view:crm.lead:0
 #: field:crm.lead,state_id:0
 msgid "State"
-msgstr "Tila"
+msgstr "Maakunta"
 
 #. module: crm
 #: view:crm.lead:0
