--- a/portal/i18n/fi.po
+++ b/portal/i18n/fi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-12-01 21:06+0000\n"
+"PO-Revision-Date: 2014-02-20 14:54+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-12-02 05:52+0000\n"
-"X-Generator: Launchpad (build 16856)\n"
+"X-Launchpad-Export-Date: 2014-02-21 06:38+0000\n"
+"X-Generator: Launchpad (build 16916)\n"
 
 #. module: portal
 #: view:portal.payment.acquirer:0
@@ -240,7 +240,7 @@ msgstr "Porttaali"
 #: code:addons/portal/wizard/portal_wizard.py:34
 #, python-format
 msgid "Your OpenERP account at %(company)s"
-msgstr "OpenERP tunnuksesi kohteessa %(company)s"
+msgstr "OpenERP tunnuksesi on %(company)s"
 
 #. module: portal
 #: model:res.groups,name:portal.group_anonymous
