--- a/sale/i18n/nl.po
+++ b/sale/i18n/nl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2014-02-18 14:55+0000\n"
+"PO-Revision-Date: 2014-02-25 12:38+0000\n"
 "Last-Translator: Erwin van der Ploeg (BAS Solutions) <Unknown>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-19 05:40+0000\n"
-"X-Generator: Launchpad (build 16916)\n"
+"X-Launchpad-Export-Date: 2014-02-26 07:31+0000\n"
+"X-Generator: Launchpad (build 16935)\n"
 
 #. module: sale
 #: model:ir.model,name:sale.model_account_config_settings
@@ -179,7 +179,7 @@ msgstr "Krt. (%)"
 #: code:addons/sale/sale.py:764
 #, python-format
 msgid "Please define income account for this product: \"%s\" (id:%d)."
-msgstr "Definieer een inkomstenrekening voor dit product:  \"%s\" (id:%d)."
+msgstr "Definieer een omzetrekening voor dit product:  \"%s\" (id:%d)."
 
 #. module: sale
 #: view:sale.report:0
